# NetValidtor

./: Cargo.toml  README.md  Readme.md  Validator.drawio
src/: main.rs
src/models/: error_map.rs  mod.rs
src/runnables/: config_actor.rs  logger.rs  mod.rs
